# AI_Driven_course_assistant

./: QNA.ipynb  pyproject.toml
