[tool.poetry]
name = "ai-driven-course-assisstant"
version = "0.1.0"
description = "It's an question answering AI assisstant."
authors = ["Sk4467 <skshahid4467@gmail.com>"]
readme = "README.md"
packages = [{include = "ai_driven_course_assisstant"}]

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.0.162"
typer = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
